--- a/public/calculator.html
+++ b/public/calculator.html
@@ -1,91 +1,79 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
-
-    <link rel="stylesheet" type="text/css" href="calculator.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-	<title> Calculator</title>
-
-
-
+<title>Calculator</title>
+<link rel="stylesheet" type="text/css" href="calculator.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="calculator.js"></script>
 </head>
+
+<div id="mydivwhite">
+
+<h1>Grade Calculator</h1>
+
 <body>
-<div class ="black">
-<div class="white">
-<h2>Grade Calculator</h2>
-<div class = "lightgray">
-<div class= "act">
-<h3 id = "red"> Activities </h3>
-</div>
-<div id="hide_box" style="display:block;">
-<p> Give grades to the numeric activities: </p>
-
-<!--Give id to the below section and edit it using css-->
+<div id="mydiv">
+<h2> Activities</h2>
+<p>Give grades to the numeric activities: </p>
 
 
-<table>
-	<tr>
-		<th><div class="bold">Name</div></th>
-		<th><div class="bold">Short Name</div></th>
-		<th><div class="bold">Weight</div></th>
-		<th><div class="bold">Grade</div></th>
-		<th><div class="bold">Percent</div></th>
-        <th><div class="bold">Letter Grade</div></th>
-	</tr>
-    <div class="first">
-	<tr>
-		<td><div class="info"> Activity 1</div></td>
-		<td><div class="info"> A1</div> </td>
-		<td> <div class="input"><input id = "A1weight" class="field" type = "number" name = "A1weight" value = " "> </div></td>
-		<td> <div class="input>"> <input id = "A1grade" class="field" type = "number" name = "A1grade" value = "" oninput="myFunction()">/<input id = "A1grade2" class="field" type = "number" name = "A1grade" value = " " oninput="myFunction()"> </div></td>
-        <td><div class="info"><p id="demo1"></p></div></td>
-        <td><div class="info"><p id="letter1"></p></div></td>
-	</tr>
-</div>
-	<tr>
-		<td><div class="info"> Activity 2 </div></td>
-		<td><div class="info"> A2</div></td>
-		<td> <div class="info"><input id = "A2weight"class="field" type = "number" name = "A2weight" value = " "> </div></td>
-		<td> <input id="A2grade" class="field" type = "number" name = "A2grade" value = " " oninput="myFunction()"> / <input id = "A2grade2" class="field" type = "number" name = "A2grade" value = " " oninput="myFunction()"> </td>
-        <td><div class="info"><p id="demo2"></p></div></td>
-        <td><div class="info"><p id="letter2"></p></div></td>
-	</tr>
-	<tr>
-		<td><div class="info"> Activity 3</div></td>
-		<td><div class="info"> A3 </div></td>
-		<td><div class="info"> <input id = "A3weight" class="field" type = "number" name = "A3weight" value = " "> </div></td>
-		<td> <input id = "A3grade" class="field" type = "number" name = "A3grade" value = " " oninput="myFunction()"> / <input id="A3grade2" class="field" type = "number" name = "A3grade" value = " " oninput="myFunction()"> </td>
-        <td><div class="info"><p id="demo3"></p></div></td>
-        <td><div class="info"><p id="letter3"></p></div></td>
-	</tr>
-	<tr>
-		<td><div class="info"> Activity 4</div></td>
-		<td><div class="info"> A4 </div></td>
-		<td><div class="info"> <input id= "A4weight" class="field" type = "number" name = "A4weight" value = " "></div></td>
-		<td> <input id = "A4grade" class="field" type = "number" name = "A4grade" value = " " oninput="myFunction()">  /  <input id="A4grade2" class="field" type = "number" name = "A4grade" value = " " oninput="myFunction()"> </td>
-        <td><div class="info"><p id="demo4"></p></div></td>
-        <td><div class="info"><p id="letter4"></p></div></td>
 
-	</tr>
+
+<table id = "mytable">
+<tr>
+    <th>Name</th>
+    <th>Short Name</th>
+    <th>Weight</th>
+    <th>Grade</th>
+    <th>Percent</th>
+</tr>
+
+<tr>
+  <td>Activity 1</td>
+  <td>A1</td>
+  <td> <input id="input1weight" type="number"> </td>
+  <td> <input id="input1.1grade" type="number" oninput="percentage()" > / <input id="input1.2grade" type="number" oninput="percentage()"> </td>
+  <td> <p id="percent1"> </p> </td>
+</tr>
+<tr>
+  <td>Activity 2</td>
+  <td>A2</td>
+  <td> <input id="input2weight" type="number"> </td>
+  <td> <input id="input2.1grade" type="number" oninput="percentage()" > / <input id="input2.2grade" type="number" oninput="percentage()" > </td>
+  <td> <p id="percent2"> </p> </td>
+</tr>
+<tr>
+  <td>Activity 3</td>
+  <td>A3</td>
+  <td> <input id="input3weight" type="number"> </td>
+  <td> <input id="input3.1grade" type="number" oninput="percentage()"> / <input id="input3.2grade" type="number" oninput="percentage()" > </td>
+  <td> <p id="percent3"> </p> </td>
+</tr>
+<tr>
+  <td>Activity 4</td>
+  <td>A4</td>
+  <td> <input id="input4weight" type="number"> </td>
+  <td> <input id="input4.1grade" type="number" oninput="percentage()" > / <input id="input4.2grade" type="number" oninput="percentage()" > </td>
+  <td> <p id="percent4"> </p> </td>
+</tr>
 </table>
 
-<h3 id = "red"> Result </h3>
-<p id="demo"></p>
+<h3>
+Result
+</h3>
+<p id="total_"> </p>
+<p id="weight_"> </p>
+
+<button onclick="mean()" type="text">MEAN</button>
+<button onclick="weight()" type="text">WEIGHTED</button>
+<button onclick="newRow()">ADD</button>
+<button onclick="remove()">Remove</button>
+
 
 </div>
-<button class="button button2" onclick="Mean()">MEAN</button><button class="button button2" onclick="Weighted()">WEIGHTED</button>
- <button  class="button button2" onclick="expandtable()">+Activity</button>
- <button class="button button2" id="red2"> Hide </button>
 
-</div>
-</div>
-<div class="answer">
-</div>
-</div>
-</div>
-</div>
-</div>
-<script type="text/javascript" src="calculator.js"></script>
 </body>
+</div>
 </html>
